Remove SVG overflow reset (fix #2)

--- a/reset.css
+++ b/reset.css
@@ -16,14 +16,10 @@ h1, h2, h3, h4, h5, h6 {
     font: inherit;
 }
 
-svg:not(:root) {
-    overflow: visible; // revert normalize's `overflow: hidden` to prevent clipping
-}
-
 input, textarea, button {
     padding: 0;
     border-radius: 0;
-    background-clip: padding-box; // remove inner shadow on iOS
+    background-clip: padding-box; /* remove inner shadow on iOS */
     font: inherit;
     color: inherit;
 }
